loleaflet/css/toolbar.css
/* ... */
#tb_formulabar_item_formula div table {
	width: 100%;
}

@keyframes textPulse {
	0% {
		box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb, 0 0 4px rgba(var(--blue1-txt-primary-color), 0.1);
	}
	50% {
		box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb, 0 0 4px rgba(var(--blue1-txt-primary-color), 0.2);
	}
	100% {
		box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb, 0 0 4px rgba(var(--blue1-txt-primary-color), 0.1);
	}
}
@keyframes presentationPulse {
	0% {
		box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb, 0 0 4px rgba(var(--orange1-txt-primary-color), 0.1);
	}
	50% {
		box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb, 0 0 4px rgba(var(--orange1-txt-primary-color), 0.2);
	}
	100% {
		box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb, 0 0 4px rgba(var(--orange1-txt-primary-color), 0.1);
	}
}
@keyframes spreadsheetPulse {
	0% {
		box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb, 0 0 4px rgba(var(--green0-txt-primary-color), 0.1);
	}
	50% {
		box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb, 0 0 4px rgba(var(--green0-txt-primary-color), 0.2);
	}
	100% {
		box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb, 0 0 4px rgba(var(--green0-txt-primary-color), 0.1);
	}
}
.text-color-indicator #document-name-input.editable:focus{
	animation: textPulse 1.5s infinite ease-in-out;
}
.presentation-color-indicator #document-name-input.editable:focus{
	animation: presentationPulse 1.5s infinite ease-in-out;
}
.spreadsheet-color-indicator #document-name-input.editable:focus{
	animation: spreadsheetPulse 1.5s infinite ease-in-out;
}

#document-name-input {
	color: var(--color-text-darker);
	font-size: var(--header-font-size);
	border: 1px solid transparent;
	background-color: transparent;
	border-radius: var(--border-radius);
	padding: 0px 2px;
	transition: 0.5s;
}

#document-name-input.editable {
	border: none;
	max-width: 100%;
	overflow: hidden;
	text-overflow: ellipsis;
	height: 18px;
	text-align: center;
	font-size: var(--default-font-size) !important;
	padding: 0px 4px;
	width: auto !important;
	border-radius: 20px;
	box-shadow: inset 0 0 2px 0 var(--color-border-dark);
	background-color: var(--color-background-lighter);
}

#document-name-input:disabled {
	border: 1px solid #fff;
	color: var(--doc-identify-color);
	border-radius: 5px;
	font-size: 13px !important;
	background-color: white;
}

.main-nav:not(.hasnotebookbar) #document-name-input.editable {
	font-size: var(--default-font-size) !important;
	padding-bottom: 2px;
}

#document-name-input.editable:focus {
	border: none;
	box-shadow: inset 0 0 2px 1px #f0f0f0, 0 0 0.1px 1px #bbb;
	background-color: var(--color-main-background);
	background-image: none;
	outline: none;
	flex: 2;
	text-align: left;
}

.readonly #document-name-input.editable:focus {
	flex: 1;
	text-align: center;
}

#document-name-input.editable:hover:not(:focus) {
	border: none;
	box-shadow: 0 0 0.1px 1px #d7d7d7, 0 0 3px 2px #f0f0f0;
	background-color: var(--color-main-background);
	background-position: right;
	background-repeat: no-repeat;
}
#tb_editbar_item_fold table.w2ui-button {
	margin: 0px 14px 0px 4px !important;
}
#tb_editbar_item_fold table.w2ui-button.over {
	background-color: var(--color-background-darker) !important;
	border: 1px solid var(--color-border-darker);
}
td[id^='tb_editbar_item_sidebar']{
	padding: 0px 8px;
}
#tb_editbar_item_edit {
	display: none;
}

#closebuttonwrapper {
	width: 37px;
	height: 32px;
	background-color: transparent;
}

.main-nav:not(.hasnotebookbar) ~ #closebuttonwrapper {
	height: 38px;
}

#closebutton {
	width: 100%;
	height: 100%;
	background: url('images/closedoc.svg') no-repeat 6px 4px/24px !important;
}

.main-nav:not(.hasnotebookbar) ~ #closebuttonwrapper #closebutton {
	background: url('images/closedoc.svg') no-repeat center/35px !important;
}

#closebutton:hover {
	border-color: var(--color-border-darker);
	background-color: var(--color-background-darker);
}

#tb_actionbar_item_left {
	width: 45%;
}
#tb_actionbar_item_right {
	width: 100%;
}

#tb_searchbar_item_left {
	width: 95%;
}

.w2ui-button{
	margin: 0 !important;
}

.w2ui-tb-image {
	width: 24px !important;
	height: 24px !important;
}

.w2ui-break {
	margin: 0 4px !important;
}

.leaflet-bar a {
	float: left;
}

div .leaflet-bar a:last-child {
	border-bottom: 1px solid var(--color-border);
}

.leaflet-control-zoom.leaflet-bar {
	margin-left: 0.5em;
}

div.leaflet-control-zoom leaflet-bar {
	width: 53px;
}

.leaflet-bar a:first-child {
	border-radius: var(--border-radius) 0 0 var(--border-radius);
}

.leaflet-bar a:last-child {
	border-radius: 0 var(--border-radius) var(--border-radius) 0;
}

label.leaflet-control-editviewswitch {
	padding: 0.2em 0.4em 0.2em 0em;
}

input.leaflet-control-search-bar {
	padding: 0.3em;
	max-width: 100px;
}

.leaflet-control-fonts-container {
	display: inline;
}

select {
	padding: 0.2em 0.4em 0.4em 0em;
	background-color: var(--color-background-lighter);
}

button.leaflet-control-search-prev {
	margin-left: 0.2em;
}

button.leaflet-control-search-next
, leaflet-control-search-cancel {
	margin-right: 0.2em;
}

#toolbar label
, .leaflet-control-search {
	background-color: var(--color-background-lighter);
}

.search-not-found {
	background-color: var(--color-error) !important;
	-webkit-transition: background-color 0.8s linear;
	-moz-transition: background-color 0.8s linear;
	-o-transition: background-color 0.8s linear;
	transition: background-color 0.8s linear;
}

#zoomlevel {
	min-width: 36px;
	font-size: var(--default-font-size);
}

/* select box */
.select2-results__option {
	padding: 5px;
	font-family: var(--oxool-font);
	color: var(--color-main-text);
	font-size: var(--default-font-size);
	overflow: hidden;
	text-overflow: ellipsis;
}
.select2-selection__rendered {
	font-family: var(--oxool-font);
	font-size: var(--default-font-size);
}
/* ... */

